network-policy/policy-or.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-policy
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    # - ipBlock:
    #     cidr: 172.17.0.0/16
    #     except:
    #     - 172.17.1.0/24
    - podSelector:
        matchLabels:
          app: ubuntu
    - namespaceSelector:
        matchLabels:
          ns: nginx
    ports:
    - port: 80
      protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: ubuntu
    - namespaceSelector:
        matchLabels:
          ns: nginx
    ports:
    - port: 80
      protocol: TCP
